--- a/styles.css
+++ b/styles.css
@@ -1,83 +1,164 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+
 .cuerpo {
-    background-image: url(legendario.jpg);
-    background-size: cover;
-    text-align: center;
-    font-family:monospace;
-    color:white;
+    background-color: #00ABB3;
+
+    font-family: 'Fredoka One', cursive;
+    color: black;
     font-size: 25px;
-    
- 
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
 }
 
-.personaje{
-    /* border-radius: 5px;
-    border:solid 5px;
-    margin: 30px; */
+.titulo {
+    font-family: 'Fredoka One', cursive;
+    color: white;
+
+
 }
-.titulo{
+
+.subtitulo {}
+
+
+/* .seccion-personajes{
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+
+} */
+
+
+.seccion-personajes {
+    justify-content: center;
     text-align: center;
-    margin: 40px; 
-    /* background-color: orange;
-    border:solid;
-    border-radius: 2px; */
-
-    /* color: teal;
-    width: 312px;
-    height: 50px;
-    background-color: orange; */
-
+    font-size: larger;
+    color: black;
 
 }
 
-label {
-    /* background-color:tomato;
-    width: 312px;
-    height: 50px; */
+
+.tarjetas {
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
-input{
-    /* background-color: aqua;
-    width: 312px;
-    height: 50px; */
-
+.tarjeta-personaje {
+    height: 140px;
+    width: 212px;
+    background: #3C4048;
+    text-align: center;
+    margin: 10px;
+    border: 2px solid white;
+    border-radius: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 
-button{
-    /* background-color: violet;
-    width: 312px;
-    height: 50px; */
+.tarjeta-personaje img {
+    width: 70px;
 }
 
-.boton-fuego{
+
+
+
+.elegir-personaje {
+    /* display: block; */
+    margin-top: 20px;
+
+    border-radius: 20px;
+    border: solid 2px;
+    padding: 9px;
+    align-items: center;
+}
+
+
+.botonera-ataques {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.boton-fuego {
     font-size: 15px;
-    font-family:monospace; 
+    font-family: 'Fredoka One', cursive;
+    color: white;
     font-size: 20px;
-}
-
-.boton-agua{
-    font-size: 15px;
-    font-family:monospace; 
-    font-size: 20px;
-
-}
-
-.boton-tierra{
-    font-size: 15px;
-    font-family:monospace; 
-    font-size: 20px;
+    background: rgb(185, 121, 3);
+    padding: 10px;
+    border: 2px solid white;
 
 }
 
-.boton-personaje{
+.boton-agua {
     font-size: 15px;
-    font-family:monospace;
+    font-family: 'Fredoka One', cursive;
+    color: white;
+    font-size: 20px;
+    background: rgb(7, 125, 223);
+    padding: 10px;
+    border: 2px solid white;
+}
+
+.boton-tierra {
+    font-size: 15px;
+    font-family: 'Fredoka One', cursive;
+    color: white;
+    font-size: 20px;
+    background: rgb(121, 46, 3);
+    padding: 10px;
+    border: 2px solid white;
+
+
+}
+
+.seccion-mensajes {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#mensajes {
+    width: 220px;
+    background: #3C4048;
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+    border-radius: 4px;
+
+}
+
+.elegir-personaje {
+    font-size: 15px;
+    font-family: 'Fredoka One', cursive;
     font-size: 20px;
 
 }
 
-.boton-reiniciar{
+.boton-reiniciar {
     font-size: 15px;
-    font-family:monospace;
+    font-family: 'Fredoka One', cursive;
+    color: white;
     font-size: 20px;
+    font-size: 20px;
+    background: red;
+    padding: 10px;
+    border: 3px solid white;
 
+}
+
+input {
+
+    display: none
 }
