--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@
     color: white;
     font-size: 20px;
     font-size: 20px;
-    background: red;
+    background: blue;
     padding: 10px;
     border: 3px solid white;
 
