--- a/styles.css
+++ b/styles.css
@@ -22,19 +22,6 @@
 
 }
 
-.subtitulo {}
-
-
-/* .seccion-personajes{
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-
-} */
-
-
 .seccion-personajes {
     justify-content: center;
     text-align: center;
@@ -73,9 +60,7 @@
 
 
 .elegir-personaje {
-    /* display: block; */
     margin-top: 20px;
-
     border-radius: 20px;
     border: solid 2px;
     padding: 9px;
@@ -123,11 +108,7 @@
 }
 
 .seccion-mensajes {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-
+    margin: auto;
     width: 220px;
     background: #3C4048;
     padding: 20px;
@@ -137,6 +118,14 @@
     border-radius: 6px;
     border: 2px solid white;
 
+}
+
+.grid-combate {
+    display: grid;
+    grid-template-columns: 109px 103px;
+    gap: 10px;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .elegir-personaje {
@@ -152,7 +141,6 @@
     color: black;
     font-size: 20px;
     font-size: 20px;
-    /* background: blue; */
     padding: 10px;
     border: 3px solid transparent;
 
